--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -229,17 +229,17 @@ Figure \ref{fig:weekday.pass} shows the number of objectives approved by day of 
 
 In this paper we have described our experience in the use of an agile mindset in computer science education, including using performance indicators from the activity to assess (and eventually improve) course-wide, as well as individual performance. With the use of learning analytics, in this paper we propose two simple data points that are able to capture most of the activity, and to a certain point the attitude, of the student, as long as the teacher devotes enough time to providing feedback and eventually approving the learning objectives provided by the student.
 
-The metrics that we have proposed are two: submission and approval time for every objective, and the difference between time, which reflect the time needed by the student to assimilate, and thus pass, every objective. By using collective metrics and proposing specific actions, we were able to improve course performance from last year (22-23) to this one (23-24). This metric also captured the main differences between courses, mainly time needed to pass every objective from the time of submission. Although it is soon to tell, a good methodology leads not only to better results, but also results that are indistinguishable statistically between courses, as shown in Figure \ref{fig:boxplot.course}. This constitutes a positive response to RQ1: metrics, if collected and chosen with precision, can capture main differences between courses, and also be used to improve course performance: measuring time-to-pass every objective individually can be used to target individual students for special attention.
+The data points that we have proposed are two: submission and approval time for every objective, and the main metric is the difference between them, which reflects the time needed by the student to assimilate, and thus pass, objectives. By using collective analytics and proposing specific actions, we were able to improve course performance from last year (22-23) to this one (23-24). This metric also captured the main differences between courses, mainly time needed to pass every objective from the time of submission. Although it is soon to tell, a good methodology leads not only to better results, but also results that are indistinguishable statistically between courses, as shown in Figure \ref{fig:boxplot.course}. This constitutes a positive response to RQ1: metrics, if collected and chosen with precision, can capture the main differences between courses, and also be used to improve course performance: measuring time-to-pass every objective individually can be used to target individual students for special attention.
 
-Research question 2 can be answered by looking at the {\em reaction time} in early objectives. Even if submissions are made early, or soon after the previous objective is cleared, managing to get an objective approved in more days than the average, on or beyond the 75\% percentile, will raise a flag and indicate a student that will need special attention. The same happens for the whole class; if the median starts to shift beyond 6 days, the whole class will need some intervention to get a significant amount of students passing the subject. Of course, too many students dropping out of class and stopping making submissions will also be a cause for failure, but the leverage the professor might have in those case is extremely limited. Too much time to pass an objective, however, would indicate that the student has the attitude, if not the aptitude to pass it, so an intervention could have certain impact.
+Research question 2 can be answered by looking at the same metric in early objectives. Even if submissions are made early, or soon after the previous objective is cleared, managing to get an objective approved in more days than the average, on or beyond the 75\% percentile, will raise a flag and indicate a student that will need special attention. The same happens for the whole class; if the median starts to shift beyond 6 days, some intervention will be needed to get a significant amount of students passing the subject. Of course, too many students dropping out of class and stopping making submissions will also be a cause for failure, but the leverage the professor might have in those case is extremely limited. Too much time to pass an objective, however, would indicate that the student has the attitude, if not the aptitude to pass it, so an intervention should have a certain impact.
 
-The answer to RQ3 can be seen mainly in Figures \ref{fig:bars.period}, \ref{fig:weekday.submissions} and \ref{fig:weekday.pass}, that show that weekly classes have a clear impact on submission, as well as passes, and also weeks without classes showing overall lower numbers of submissions. This proves that agile teaching, with frequent interactions with the {\em client} (= student), and using data to assess and address specific needs, can be used to improve individual student, as well as class performance.
+The answer to RQ3 can be seen mainly in Figures \ref{fig:bars.period}, \ref{fig:weekday.submissions} and \ref{fig:weekday.pass}, that show that weekly classes have a clear impact on submissions as well as passes; weeks without classes show overall lower numbers of submissions. This proves that agile teaching, with frequent interactions with the {\em client} (= student), and using data to assess and address specific needs, can be used to improve individual student, as well as class performance, adding value to the student.
 
-This analytics system, which was deployed from the first year (with small variations), allowed us to make different interventions, not all of them successful. To avoid the high dropout rate in the first objectives, we started a hackathon in the first week of class of 22-23. Unfortunately, this intervention did not succeed, and that was clearly reflected in the analytics. Starting a hackathon to pass objectives 2 and 3 did have a limited success, and helped some students to get back on track. The first-week hackathon was not repeated, and in the first days of this course 23-24 we introduced another gamification experience; this achieved its short-term objectives, as the analytics show, and apparently some long-term objectives too.
+This learning analytics system, which was deployed from the first year (with small variations), allowed us to make different interventions, not all of them successful. To avoid the high dropout rate in the first objectives, we started a hackathon in the first week of class of 22-23. Unfortunately, this intervention did not succeed, and that was clearly reflected in the analytics. Starting a hackathon to pass objectives 2 and 3 (and dropping lectures) did have a limited success, and helped some students to get back on track. In the first days of this course 23-24 we introduced another gamification experience after dropping the hackathon; this achieved its short-term objectives, as the analytics show, and apparently some long-term objectives too.
 
 In general we can conclude that an agile mindset of serving the customer (the student) and adapting to specific class circumstances, as revealed by the learning analytics and its comparison, will boost student success and efficient acquisition of engineering best practices and skills. Besides, the learning analytics system is totally independent of the platform that is used for assessing student's submissions. As long as the submission time and when it is passed is known with precision, the same measurements can be applied; these measures can be downloaded from a LMS or simply noted in a spreadsheet.
 
-Since every class is going to be different, in-class measurements such as the time the student needs from submission to objective success as a measurement of {\em client satisfaction} is an actionable diagnostic that can help teachers apply individual-level or collective measures to improve learning outcomes in an agile way.
+Since every class is going to be different, in-class measurements such as the time the student needs from submission to objective success as a measurement of {\em product quality} is an actionable diagnostic that can help teachers apply individual-level or collective measures to improve learning outcomes in an agile way.
 
 
 \bibliographystyle{ACM-Reference-Format}
