--- a/paper/green-computing.tex
+++ b/paper/green-computing.tex
@@ -14,7 +14,7 @@
 
 \begin{document}
 
-\title{Formative evaluation and learning analytics for agile teaching}
+\title{Teaching how to engineer greener software}
 
 % \author{JJ Merelo-Guervós}
 % \email{jmerelo@ugr.es}
@@ -37,7 +37,15 @@
 \renewcommand{\shortauthors}{A. U. Thor}
 
 \begin{abstract}
-
+{\em Green} computing is a general term that describes a host of techniques that
+try to minimize the carbon footprint of software applications. As such, it is
+not a single body of knowledge, but a series of best practices that help reduce
+energy consumption relying on the features of any of the different layers that
+are exercised by a software applications. This represents a challenge at the
+time of designing a comprehensive syllabus that would help students develop the
+series of skills needed to identify energy bottlenecks and eliminate them. In
+this poster we will describe the different concepts involved, and how they will
+be delivered to guarantee the achievement of learning objectives.
 \end{abstract}
 
 \begin{CCSXML}
@@ -64,11 +72,6 @@
 
 \maketitle
 
-\section{Introduction}
-
-
-\section{Discussion and conclusions}
-\label{sec:conclusions}
 
 
 \bibliographystyle{ACM-Reference-Format}
