Introducing the concepts

--- a/paper/green-computing.tex
+++ b/paper/green-computing.tex
@@ -72,10 +72,19 @@ be delivered to guarantee the achievement of learning objectives.
 
 \maketitle
 
+Green computing \cite{kurp2008green} deals, in general, with reducing the
+environmental impact of the creation and use of computing resources. From the
+software perspective, it proposes maximizing the amount of work done for every
+unit of energy spent. But in order to achieve that, how energy is spent across
+all the different computing layers needs to be assessed, and understood.
 
+This is why getting the student to achieve a certain amount of understanding of
+the different process involved, methdologies needed to carry out that
+assessment, and eventually design your code from the ground up or refactoring it
+to make it {\em greener} is a challenge.
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{../rpg.bib,../dev.bib, ../agile.bib,../learning-analytics.bib,../pbl.bib,../formative-evaluation.bib}
+\bibliography{../energy.bib}
 
 \end{document}
 \endinput
