#13 introducing computing curricula

--- a/dev.bib
+++ b/dev.bib
@@ -4,3 +4,12 @@
   year={2001},
   publisher={The Agile Alliance, www. agilemanifesto. org}
 }
+
+@book{cc2020,
+author = {CC2020 Task Force},
+title = {Computing Curricula 2020: Paradigms for Global Computing Education},
+year = {2020},
+isbn = {9781450390590},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA}
+}
