--- a/paper/green-computing.tex
+++ b/paper/green-computing.tex
@@ -83,8 +83,18 @@ the different process involved, methdologies needed to carry out that
 assessment, and eventually design your code from the ground up or refactoring it
 to make it {\em greener} is a challenge.
 
+And it is a challenge that has been recently acknowledged by the joint IEEE/ACM
+task force in \cite{cc2020}. Environmental concerns is one of the skills
+mentioned in the draft competencies in software engineering as part of the
+needed ``behavioral attributes'' as well as in the
+Master's degree in Information Systems (IS), as part of the IS Strategy and
+Governance competence; the computer engineering set of draft competencies
+includes it as part of the Systems Resource Management subject matter. This
+again shows the inter-disciplinar content that needs to be considered even if
+the focus is on software engineering.
+
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{../energy.bib}
+\bibliography{../energy.bib,../dev.bib}
 
 \end{document}
 \endinput
